Updated page title

--- a/es/index.html
+++ b/es/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Commercial Cleaning Services, Residential Cleaning Services in South Florida - Quality Cleaning Services - Krystal Cleaning Services LLC</title>
     <meta name="twitter:card" content="summary">
     <meta name="description" content="We offer quality cleaning services for your home and business.">
     <meta property="og:type" content="website">
