--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Commercial Cleaning Services, Residential Cleaning Services in South Florida - Quality Cleaning Services - Krystal Cleaning Services LLC</title>
     <meta name="twitter:card" content="summary">
     <meta name="description" content="We offer quality cleaning services for your home and business.">
     <meta property="og:type" content="website">
@@ -16,19 +16,22 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Marck+Script">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/5fe0d681a8a254155ab54a8c/1eq34bqkh';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
+        var Tawk_API = Tawk_API || {},
+            Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5fe0d681a8a254155ab54a8c/1eq34bqkh';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
     <!--End of Tawk.to Script-->
@@ -40,7 +43,8 @@
             <ul class="nav navbar-nav text-right ml-sm-left mx-auto mx-sm-0">
                 <li class="nav-item text-center text-sm-right">
                     <p class="m-0" style="color: rgb(10,56,85);"><a href="es/index.html">Ver en Español</a></p>
-                    <p class="m-0" style="color: rgb(10,56,85);">Call us today!</p><a class="nav-link m-0 p-0" href="tel:19542576254" style="color: rgb(238,9,121);font-size: 1.4rem;">+1 (954) 257-6254</a>
+                    <p class="m-0" style="color: rgb(10,56,85);">Call us today!</p><a class="nav-link m-0 p-0"
+                        href="tel:19542576254" style="color: rgb(238,9,121);font-size: 1.4rem;">+1 (954) 257-6254</a>
                 </li>
             </ul>
         </div>
@@ -50,8 +54,11 @@
             <div class="row align-items-center" id="banner-row" style="height: 80vh;">
                 <div class="col-md-12 align-self-center">
                     <div id="title-bg" class="d-inline-block pr-5 pl-1">
-                        <p style="font-size: 3rem;font-family: 'Marck Script', cursive;color: rgb(59,147,202);text-shadow: 1px 0px rgb(255,255,255);">We provide</p>
-                        <h1 class="display-4" style="color: rgb(10,56,85);text-shadow: 1px 1px 3px rgb(255,255,255);">Quality Cleaning Services</h1>
+                        <p
+                            style="font-size: 3rem;font-family: 'Marck Script', cursive;color: rgb(59,147,202);text-shadow: 1px 0px rgb(255,255,255);">
+                            We provide</p>
+                        <h1 class="display-4" style="color: rgb(10,56,85);text-shadow: 1px 1px 3px rgb(255,255,255);">
+                            Quality Cleaning Services</h1>
                     </div>
                 </div>
             </div>
@@ -66,7 +73,9 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4" style="color: rgb(10,56,85);">Commercial</h2>
-                        <p class="lead" style="color: rgb(10,56,85);">From lobby to office spaces, we are&nbsp;thorough in our cleaning process. If you want a spotless business, we are your cleaning solution. Contact us today to learn more about our services.</p>
+                        <p class="lead" style="color: rgb(10,56,85);">From lobby to office spaces, we are&nbsp;thorough
+                            in our cleaning process. If you want a spotless business, we are your cleaning solution.
+                            Contact us today to learn more about our services.</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +90,9 @@
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
                         <h2 class="display-4" style="color: rgb(10,56,85);">Residential</h2>
-                        <p class="lead" style="color: rgb(10,56,85);">Our cleaning system sets us apart. Our customers keep coming back to us, because we provide services that work and keep their homes and apartments clean, right down to the little details.</p>
+                        <p class="lead" style="color: rgb(10,56,85);">Our cleaning system sets us apart. Our customers
+                            keep coming back to us, because we provide services that work and keep their homes and
+                            apartments clean, right down to the little details.</p>
                     </div>
                 </div>
             </div>
@@ -93,7 +104,10 @@
                 <div class="col-md-12">
                     <div class="jumbotron">
                         <h1 style="color: rgb(10,56,85);">Safe and Effective Process</h1>
-                        <p class="lead" style="color: rgb(10,56,85);">At Krystal Cleaning Services, the health and safety of our customers and employees has always been our top priority. That’s why our process is now 100% social distance friendly. Schedule your service over the phone, receive a text message on arrival, and relax while we take care of the rest.</p>
+                        <p class="lead" style="color: rgb(10,56,85);">At Krystal Cleaning Services, the health and
+                            safety of our customers and employees has always been our top priority. That’s why our
+                            process is now 100% social distance friendly. Schedule your service over the phone, receive
+                            a text message on arrival, and relax while we take care of the rest.</p>
                         <p></p>
                     </div>
                 </div>
@@ -109,26 +123,22 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4" style="color: rgb(10,56,85);">Contact us today!</h2>
-                        <p class="lead" style="color: rgb(10,56,85);">We are a small woman owned business. You can reach out to us via phone, email, or using the chat bubble here.</p>
-                        <div class="my-2" style="font-size: 1.2rem;"><a href="tel:19542576254"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" class="bi bi-telephone-fill mr-4">
-                                    <path fill-rule="evenodd" d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z"></path>
+                        <p class="lead" style="color: rgb(10,56,85);">We are a small woman owned business. You can reach
+                            out to us via phone, email, or using the chat bubble here.</p>
+                        <div class="my-2" style="font-size: 1.2rem;"><a href="tel:19542576254"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"
+                                    fill="currentColor" class="bi bi-telephone-fill mr-4">
+                                    <path fill-rule="evenodd"
+                                        d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z">
+                                    </path>
                                 </svg>+1 (954) 257-6254</a></div>
-                        <div class="my-2" style="font-size: 1.2rem;"><a href="mailto:anycruz02777@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" class="bi bi-envelope-fill mr-4">
-                                    <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"></path>
+                        <div class="my-2" style="font-size: 1.2rem;"><a href="mailto:anycruz02777@gmail.com"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"
+                                    fill="currentColor" class="bi bi-envelope-fill mr-4">
+                                    <path fill-rule="evenodd"
+                                        d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z">
+                                    </path>
                                 </svg>anycruz02777@gmail.com</a></div>
-                        <div><!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5e44b395a89cda5a1885ac81/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script--></div>
                     </div>
                 </div>
             </div>
