--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Commercial Cleaning Services, Residential Cleaning Services in South Florida - Quality Cleaning Services - Krystal Cleaning Services LLC</title>
+    <title>Commercial Cleaning Services, Residential Cleaning Services in South Florida - Quality Cleaning Services -
+        Krystal Cleaning Services LLC</title>
     <meta name="twitter:card" content="summary">
     <meta name="description" content="We offer quality cleaning services for your home and business.">
     <meta property="og:type" content="website">
@@ -22,14 +23,14 @@
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/5fe0d681a8a254155ab54a8c/1eq3b2snm';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5fe0d681a8a254155ab54a8c/1eq3b2snm';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
     <!--End of Tawk.to Script-->
@@ -123,20 +124,36 @@
                         <h2 class="display-4" style="color: rgb(10,56,85);">Contact us today!</h2>
                         <p class="lead" style="color: rgb(10,56,85);">We are a small woman owned business. You can reach
                             out to us via phone, email, or using the chat bubble here.</p>
-                        <div class="my-2" style="font-size: 1.2rem;"><a href="tel:19542576254"><svg
+                        <div class="my-2" style="font-size: 1.2rem;">
+                            <a href="tel:19542576254">
+                                <svg
                                     xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"
                                     fill="currentColor" class="bi bi-telephone-fill mr-4">
                                     <path fill-rule="evenodd"
                                         d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z">
                                     </path>
-                                </svg>+1 (954) 257-6254</a></div>
+                                </svg>
+                                +1 (954) 257-6254
+                            </a>
+                        </div>
+
+                        <div class="my-2" style="font-size: 1.2rem;">
+                            <a href="https://wa.link/kqkkst">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-quote-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM7.194 6.766c.087.124.163.26.227.401.428.948.393 2.377-.942 3.706a.446.446 0 0 1-.612.01.405.405 0 0 1-.011-.59c.419-.416.672-.831.809-1.22-.269.165-.588.26-.93.26C4.775 9.333 4 8.587 4 7.667 4 6.747 4.776 6 5.734 6c.271 0 .528.06.756.166l.008.004c.169.07.327.182.469.324.085.083.161.174.227.272zM11 9.073c-.269.165-.588.26-.93.26-.958 0-1.735-.746-1.735-1.666 0-.92.777-1.667 1.734-1.667.271 0 .528.06.756.166l.008.004c.17.07.327.182.469.324.085.083.161.174.227.272.087.124.164.26.228.401.428.948.392 2.377-.942 3.706a.446.446 0 0 1-.613.01.405.405 0 0 1-.011-.59c.42-.416.672-.831.81-1.22z"/>
+                                </svg>
+                                +1 (954) 257-6254
+                            </a>
+                        </div>
+
                         <div class="my-2" style="font-size: 1.2rem;"><a href="mailto:anycruz02777@gmail.com"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"
                                     fill="currentColor" class="bi bi-envelope-fill mr-4">
                                     <path fill-rule="evenodd"
                                         d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z">
                                     </path>
-                                </svg>anycruz02777@gmail.com</a></div>
+                            </svg>anycruz02777@gmail.com</a>
+                        </div>
                     </div>
                 </div>
             </div>
