--- a/es/index.html
+++ b/es/index.html
@@ -137,11 +137,12 @@
     </section>
     <footer class="py-5" style="background: rgb(10,56,85);">
         <div class="container">
-            <p class="text-center text-white m-0 small">Copyright&nbsp;© Krystal Cleaning Services, LLC 2020</p>
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© Krystal Cleaning Services, LLC 2020 - <span id="current_year"></span> </p>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
+    <script src="year.js"></script>
 </body>
 
 </html>
